Change the API to search for a file with the result in tests